instructions.Instructions.scala.error
Compilation error:
Instructions:1: error: not found: value baissebrosse
baissebrosse()
^Instructions:11: error: not found: value levebrosse
levebrosse()
^